2008-01-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeClassesRule.cs: Don't report defect if the fields are 
	const or readonly or if they were generated (e.g. auto-implemented 
	properties in C# 3).
	* AvoidLongMethodsRule.cs: Move InitWellKnownAutogeneratedNames code
	inside static ctor so we don't initialize the dictionary each time
	the rule is called.
	* Gendarme.Rules.Smells.mdp, Test/Test.Rules.Smells.mdp: MonoDevelop
	removed the "./" prefix before each file.
	* Makefile.am: Compile unit tests with -langversion:linq parameter.

2008-01-05  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Compile with -langversion:linq parameter.
	* AvoidLargeClassesRule.cs, AvoidSpeculativeGeneralityRule.cs: Remove
	ugly IsCompilerGenerated helper method.  Use rocks instead.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Add the ceq code to the acceptable
	instructions set.  With this change, all the bugs in code compiled under
	csc without optimization flag are fixed.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Avoid creating empty expressions, because
	the equals method in the Expression class checks for the same size, and
	if the size is zero, then the equals returns true.  Fixes one of the 
	bug in code compiled under csc without optimization flag.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: As the rule is only applied to types, then
	if the type is Compiler Generated, skip the type; instead of check the
	field names.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: Added the special case for the fields
	prefixed as $$field-, when this happens, there aren't a common prefix.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* Expression.cs, ExpressionFillerVisitor.cs: Added the code for
	including the Stfld in the Expressions, and computate it for check the
	code duplication.
