@@ -92,8 +92,8 @@ namespace Gendarme.Rules.Smells {
 			if (IsAutogenerated (method))
 				return runner.RuleSuccess;
 
-			Location location = new Location (method.DeclaringType.Name, method.Name, 0);
-			Message message = new Message ("The method is too long.",location, MessageType.Error);
+			Location location = new Location (method);
+			Message message = new Message ("The method is too long.", location, MessageType.Error);
 			return new MessageCollection (message);
 		}
 	}
